--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.7.0",
+    "react-icons": "^3.11.0",
+    "react-map-gl": "^5.2.7",
     "react-scripts": "3.4.3"
   },
   "scripts": {
